aws/terraform/networking/nat_gateway.tf
resource "aws_nat_gateway" "this" {

  allocation_id = aws_eip.nat.id

  subnet_id = aws_subnet.public[local.azs[0]].id

  tags = merge(
    local.common_tags,
    {
      Name = "${local.name_prefix}-nat"
    }
  )

  depends_on = [
    aws_internet_gateway.this
  ]
}
